--- a/tema-gepeto/assets/css/style-base.css
+++ b/tema-gepeto/assets/css/style-base.css
@@ -462,6 +462,10 @@ span.font-decorative {
   font-size      : 4.8cap;
 }
 
+.border-primary-color {
+  border-color: var(--primary-color) !important;
+}
+
 .serrilhadoVertical {
   background         : url(imagens/serrilhadoVertical.svg);
   width              : 9px;
